test/corpus/adjacent.txt
========
adjacent
========

f x

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

================
nested adjacents
================

f g x

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (adjacent
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

=======================
adjacent w/ parentheses
=======================

x (y)
(x) y
(x) (y)
x ()
() x
() ()

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (parentheses
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (parentheses
            (expression
              (token
                (identifier)))))
        (expression
          (token
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (parentheses
            (expression
              (token
                (identifier)))))
        (expression
          (parentheses
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (parentheses)))))
  (statement
    (expression
      (adjacent
        (expression
          (parentheses))
        (expression
          (token
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (parentheses))
        (expression
          (parentheses))))))

=================
adjacent w/ unary
=================

x not y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (unary
            (unary_only
              (expression
                (token
                  (identifier))))))))))

==============
adjacent w/ if
==============

x if y then z
x if y then z else w

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (if
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (if
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

=================
adjacent w/ quote
=================

symbol x y
x symbol y
symbol x symbol y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (token
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (quote
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (quote
            (identifier)))))))

========================
adjacent w/ global-quote
========================

global x y
x global y
global x global y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (token
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (quote
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (quote
            (identifier)))))))

=======================
adjacent w/ local-quote
=======================

local x y
x local y
local x local y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (token
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (quote
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (quote
            (identifier)))))))

========================
adjacent w/ thread-quote
========================

threadLocal x y
x threadLocal y
threadLocal x threadLocal y
threadVariable x y
x threadVariable y
threadVariable x threadVariable y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (token
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (quote
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (quote
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (token
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (quote
            (identifier))))))
  (statement
    (expression
      (adjacent
        (expression
          (quote
            (identifier)))
        (expression
          (quote
            (identifier)))))))

===
try
===

x try y
x try y then z
x try y else w
x try y then z else w
x try y except a do b
x try y then z except a do b

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (try
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (try
            (expression
              (token
                (identifier)))
            (identifier)
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (try
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (identifier)
            (expression
              (token
                (identifier)))))))))

=====
catch
=====

x catch y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (unary
            (unary_only
              (expression
                (token
                  (identifier))))))))))

=====
while
=====

x while y do w
x while y list z
x while y list z do w

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (while
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (while
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (while
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

===
for
===

x for y in z do w

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (for
            (identifier)
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))))))

===
new
===

x new y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (expression
          (new
            (expression
              (token
                (identifier)))))))))
