test/corpus/arrow.txt
=====
arrow
=====

x -> y

---

(source_file
  (parse_tree
    (arrow
      (parse_tree
        (token
          (identifier)))
      (parse_tree
        (token
          (identifier))))))

===================
function definition
===================

f = x -> y + z

---

(source_file
  (parse_tree
    (binary
      (binary_right
        (parse_tree
          (token
            (identifier)))
        (parse_tree
          (arrow
            (parse_tree
              (token
                (identifier)))
            (parse_tree
              (binary
                (binary_left
                  (parse_tree
                    (token
                      (identifier)))
                  (parse_tree
                    (token
                      (identifier))))))))))))
