test/corpus/binary.txt
=====
sharp
=====

x#y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==============
sharp-question
==============

x#?y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=======
percent
=======

x%y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========
ampersand
=========

x&y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

====
star
====

x*y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========
star-star
=========

x**y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

====
plus
====

x+y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========
plus-plus
=========

x++y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
comma
=====

x,y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
minus
=====

x-y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===
dot
===

x.y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
dot-dot
=====

x..y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

============
dot-question
============

x.?y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
slash
=====

x/y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
slash-slash
===========

x//y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========
less-less
=========

x<<y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
at-at
=====

x@@y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==============
at-at-question
==============

x@@?y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
power
=====

x^y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
power-star-star
===============

x^**y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==========
power-less
==========

x^<y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

================
power-less-equal
================

x^<=y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============
power-greater
=============

x^>y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
power-greater-equal
===================

x^>=y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
power-power
===========

x^^y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==========
underscore
==========

x_y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
underscore-less
===============

x_<y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====================
underscore-less-equal
=====================

x_<=y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==================
underscore-greater
==================

x_>y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

========================
underscore-greater-equal
========================

x_>=y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===
bar
===

x|y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==============
bar-underscore
==============

x#y

---

(source_file
  (statement
    (expression
      (strong_binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=======
bar-bar
=======

x||y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

====
cdot
====

x·y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
box-product
===========

x⊠y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
shuffle-product
===============

x⧢y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==========
not-equals
==========

x!=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=================
augmented-percent
=================

x%=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
augmented-ampersand
===================

x&=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
augmented-star-star
===================

x**=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
augumented-star
===============

x*=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
augmented-plus-plus
===================

x++=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==============
augmented-plus
==============

x+=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
augmented-minus
===============

x-=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

======================
augmented-dot-dot-less
======================

x..<=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=================
augmented-dot-dot
=================

x..=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====================
augmented-slash-slash
=====================

x//=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
augmented-slash
===============

x/=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
colon
=====

x:y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
colon-equal
===========

x:=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

====
less
====

x<y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==========
left-arrow
==========

x<-y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
augmented-less-less
===================

x<<=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==========
less-equal
==========

x<=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

======================
long-double-left-arrow
======================

x<==y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========================
long-long-double-left-arrow
===========================

x<===y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

====================
long-bi-double-arrow
====================

x<==>y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==============================
augmented-long-bi-double-arrow
==============================

x<==>=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
equal
=====

x=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====================
not-equal-equal-equal
=====================

x=!=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========
equal-equal
===========

x==y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=================
equal-equal-equal
=================

x===y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

============================
long-long-double-right-arrow
============================

x===>y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

======================================
augmented-long-long-double-right-arrow
======================================

x===>=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=======================
long-double-right-arrow
=======================

x==>y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=================================
augmented-long-double-right-arrow
=================================

x==>=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==================
double-right-arrow
==================

x=>y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=======
greater
=======

x>y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============
greater-equal
=============

x>=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
greater-greater
===============

x>>y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========================
augmented-greater-greater
=========================

x>>=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

========
question
========

x?y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=================
question-question
=================

x??y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===========================
augmented-question-question
===========================

x??=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===
at
===

x@y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

============
augmented-at
============

x@=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
augmented-at-at
===============

x@@=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

========================
augmented-at-at-question
========================

x@@?=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========
backslash
=========

x\y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
augmented-backslash
===================

x\=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
backslash-backslash
===================

x\\y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============================
augmented-backslash-backslash
=============================

x\\=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========================
augmented-power-star-star
=========================

x^**=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===============
augmented-power
===============

x^=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====================
augmented-power-power
=====================

x^^=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

====================
augmented-underscore
====================

x_=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========
deduction
=========

x|-y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
augmented-deduction
===================

x|-=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=============
augmented-bar
=============

x|=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

========================
augmented-bar-underscore
========================

x|_=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=================
augmented-bar-bar
=================

x||=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

==============
augmented-cdot
==============

x·=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====================
augmented-box-product
=====================

x⊠=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=========================
augmented-shuffle-product
=========================

x⧢=y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===
and
===

x and y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===
or
===

x or y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===
xor
===

x xor y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

=====
tilde
=====

x ~ y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
order of operations
===================

x + y * z
x or y and z
x = y + z
x^y^z

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (binary
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (binary
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (binary
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier))))))))
  (statement
    (expression
      (strong_binary
        (expression
          (strong_binary
            (expression
              (token
                (identifier)))
            (expression
              (token
                (identifier)))))
        (expression
          (token
            (identifier)))))))

=====
arrow
=====

x -> y

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (token
            (identifier)))))))

===================
function definition
===================

f = x -> y + z

---

(source_file
  (statement
    (expression
      (binary
        (expression
          (token
            (identifier)))
        (expression
          (binary
            (expression
              (token
                (identifier)))
            (expression
              (binary
                (expression
                  (token
                    (identifier)))
                (expression
                  (token
                    (identifier)))))))))))
