test/corpus/comment.txt
============
line comment
============

x -- comment

---

(source_file
  (statement
    (expression
      (token
        (identifier)))
    (comment)))

==========================
block comment (multi-line)
==========================

x
-*
comment
comment
comment
*-
y

---

(source_file
  (statement
    (expression
      (token
        (identifier))))
  (comment)
  (statement
    (expression
      (token
        (identifier)))))

======================
block comment (inline)
======================

x -* comment *- y

---

(source_file
  (statement
    (expression
      (adjacent
        (expression
          (token
            (identifier)))
        (comment)
        (expression
          (token
            (identifier)))))))
