test/corpus/multiple-statements.txt
========
newlines
========

x
y
z

---

(source_file
  (statement
    (expression
      (token
        (identifier))))
  (statement
    (expression
      (token
        (identifier))))
  (statement
    (expression
      (token
        (identifier)))))

==========
semicolons
==========

x;y;z

---

(source_file
  (statement
    (expression
      (token
        (identifier))))
  (statement
    (expression
      (token
        (identifier))))
  (statement
    (expression
      (token
        (identifier)))))
